[project]
name = "rebalance-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anthropic>=0.98.1",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "newsapi-python>=0.2.7",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "yfinance>=1.3.0",
]
